# $Id$
2007-08-27 Benoit Grégoire  <bock@step.polymtl.ca>
	* Added vacuum_last_resort_fix_backup_restore_database.sh.  This is DANGEROUS, and should only be run when your neglected (or had problem with) your VACCUMs,
	your database has become slow as molases, and VACUUM FULL is not an option because your db has grown too big.

2007-08-27 Benoit Grégoire  <bock@step.polymtl.ca>
	* install.php:  Fix #368: Correct the svn source for SimplePie 1.0, the 1.0b2 branch was unexpectedly renamed.  
	Note that this forces a rather disruptive change.  To update an existing install, you'll need to run the following commands:
	cd lib/simplepie
	svn switch http://svn.simplepie.org/simplepie/branches/1.0/
	But this also requires a recent feedpressreview (revision 13), so you'll also need to run:
	cd lib/feedpressreview
	svn update
	
2007-08-06 Benoit Grégoire  <bock@step.polymtl.ca>
	* Allow users with NETWORK_PERM_EDIT_ANY_NODE_CONFIG to edit gateway id's
	
2007-08-05 Damien Raude-Morvan <drazzib@drazzib.com>
	* Security.php : A permission can be acquired by a user via multiples roles, this means
	that, for the moment, we have to use DISTINCT to check if a user had correct permission
	(otherwise the SQL request is invalid : subrequest return more than one line).
	* Locale.php : If the browser send Accept-Value header without any quality (i.e. q=x.y)
	we have to use order of the locales to select between them (and don't use a rand() number).

2007-08-04 Benoit Grégoire  <bock@step.polymtl.ca>
	* Portugese (from portugal) translation contributed by MiguelCMA
	* locale/gen.sh:  Major change to .po file generation.  Now uses msgmerge so we won't completely throw away previous efforts by translators (will preserve comments, and use fuzzy translation).  It's also much faster (seconds instead of minutes), and produces less strings to translate.
	
2007-08-03 Damien Raude-Morvan <drazzib@drazzib.com>